fixed header spacing

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,5 +16,5 @@
   justify-content: space-between;
   line-height: 0;
   background-color: #101935;
-  padding: 50px 20px 0px 20px;
+  padding: 60px 20px 0px 20px;
 }
